--- a/gatsby-starter/package.json
+++ b/gatsby-starter/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^3.14.3",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-remark": "^4.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
